# FYP

./: .gitignore  CMakeLists.txt  ChangeFormat.cpp  ChangeFormat.h  README.md  docker-compose.yaml  main.cpp
BRNN_parallel3.1/: BRNN.cxx  BRNN.h  Dockerfile  Layer.cxx  Layer.h  Model.cxx  Model.h  NN.cxx  Options.txt  Options_ANN  Sequence.h  Train  Train.cxx  _RELEASE_NOTES.txt  makefile
BRNN_parallel3.1/testing_BRNN/: BRNN.h  BRNNr.cxx  BRNNr.h  Layer.cxx  Layer.h  MModel.cxx  MModel.h  Model.cxx  Model.h  NN.h  NNr.cxx  NNr.h  NNt.cxx  NNt.h  Predict  Predict.cxx  Predict_thresholds  Predict_thresholds.cxx  Sequence.h  Train.cxx  error_long  error_short  makefile  makefile.predict  makefile.predict_th  model  numodel  test001.model  test002.model  test003.model
ChangeFormat/: ChangeFormat.cpp  ChangeFormat.h
DNN_n-to-n_1layer/: DNN1.cxx  DNN1.h  Dockerfile  Layer.cxx  Layer.h  Model.cxx  Model.h  NN.h  NN1.cxx  NN1.h  NNt.h  NNt1.cxx  NNt1.h  Options_1l.txt  Sequence.h  Train  Train.cxx  Train_inc.cxx  _HOW.txt  _RELEASE_NOTES.txt  makefile  makefile_inc
DataExploration/: DataExploration.cpp  DataExploration.h
JsonParse/: JsonParse.cpp  JsonParse.h
Protein/: Protein.cpp  Protein.h
